[tool.poetry]
name = "contentctl"
version = "2.0.1"
description = "Splunk Content Control Tool"
authors = ["STRT <research@splunk.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.scripts]
contentctl = 'contentctl.contentctl:main'

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.11"
PyYAML = "^6.0"
requests = "^2.28.1"
pycvesearch = "^1.2"
xmltodict = "^0.13.0"
attackcti = "^0.3.7"
Jinja2 = "^3.1.2"
questionary = "^1.10.0"
gitpython = "^3.1.29"
docker = "^6.0.1"
splunk-sdk = "^1.7.2"
validators = "^0.20.0"
semantic-version = "^2.10.0"
bottle = "^0.12.23"
tqdm = "^4.65.0"
#splunk-appinspect = "^2.36.0"
splunk-packaging-toolkit = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
darker = "*"
pre-commit = "*"
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.darker]
src = [
    "contentctl",
]
isort = false
black = false
lint = [
    "mypy",
    "flake8",
]
log_level = "INFO"

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
use_parentheses=true
known_first_party=["contentctl"]

[tool.black]
skip-string-normalization=true
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''
